# eng_comp

./: README.md
CDirectory/: CelsiusFarenheit.c  FarenheitCelsius.c  HelloWorld.c  HiThere.c  TemperatureCalc.c  TemperatureCalc.c~  TemperatureCalc2.c  axb  axb.c  axb.c~  test.c
Practice/Exercises/: CMakeLists.txt  projectv2.c
Practice/Shop/: CMakeLists.txt
Practice/Shop/log/: txt.csv
Practice/Shop/src/: change_calc.c  change_calc.h  shopping_sim.c
Practice/exercises/: CMakeLists.txt  book.c  main.c  savingsfunc.c  test.c
Practice/project/: CMakeLists.txt  a.out  ass1-soln  ass1-soln.c  ass2-soln.c  main  projectv2  structs  vector
workshops/week2/: CMakeLists.txt  axb.c  basic_change_calc.c  change_calc  change_calc.c  isprime.c  main.c  test.c  tute2.c  workshop2  workshop2.c
